[gd_scene load_steps=4 format=2]

[ext_resource path="res://Reused/ReusableSystems/FileSelector/FileSelector.gd" type="Script" id=1]
[ext_resource path="res://Reused/ReusableSystems/FileSelector/FileItem/FileItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://Reused/ReusableSystems/FileSelector/FileList.gd" type="Script" id=3]

[node name="FileSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
file_item_res = ExtResource( 2 )
path = "user://"

[node name="_Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FileList" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="exit" from="ScrollContainer/FileList" to="." method="_on_FileList_exit"]
[connection signal="looped" from="ScrollContainer/FileList" to="." method="looped"]
